Fix layout issues on older NC versions caused by the previous NC28 fixes
- Fix navigation pane item highlight being shown as rounded on NC17-24
  (at least) where the overall layout is not a good fit for this. There
  still is such an issue on the appearance on NC17 that the active
  navigation pane item is highlighted with a colored background while
  this is not the normal graphical style on that NC version. This isn't
  critical in any way and very few people should use such an old NC
  version these days.

- Don't apply bottom margin for navigation pane items on the older NC
  versions (< 25) or OC as that's not the norm on those cloud versions

- Fix Settings view icon being hidden on the navigation pane on NC13-17
  (at least).

--- a/css/music-navigation.css
+++ b/css/music-navigation.css
@@ -25,7 +25,12 @@
 }
 
 #app-navigation > ul > li {
-	border-radius: var(--border-radius-pill);
+	/* The NC server uses --border-radius-pill for this purpose but we don't because that variable is
+	   available also at least on NC17-24 where the overall layout is not a good fit for rounded highlight.
+	   The border-radius-rounded has slightly larger value but that doesn't cause any visual difference
+	   here because the radius already maxes out for line of height 44px with border-radius-pill.
+	*/
+	border-radius: var(--border-radius-rounded);
 }
 
 #app-navigation > ul > li:hover,
@@ -51,7 +56,7 @@
 #app-navigation .music-navigation-item {
 	position: relative;
 	height: 44px;
-	margin-bottom: 4px;
+	margin-bottom: var(--default-grid-baseline);
 }
 
 #app-navigation .music-navigation-item-content {
@@ -268,4 +273,5 @@
 	height: 16px;
 	margin-right: 11px;
 	margin-top: 1.5px;
+	margin-left: 0;
 }
